@@ -3,8 +3,8 @@ package com.arkflame.staffmodex.modernlib.commands;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.util.Arrays;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 
 import org.bukkit.Bukkit;
@@ -21,7 +21,7 @@ public abstract class ModernCommand extends Command {
 
     public ModernCommand(String name, String ...aliases) {
         super(name);
-        setAliases(List.of(aliases));
+        setAliases(Arrays.asList(aliases));
     }
 
     public void register() {
